Fix more/less button overflow

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -24,4 +24,5 @@ html, body {
 .ukAdvancedButton {
   align-self: flex-start;
   min-width: 40px !important;
+  overflow: visible !important;
 }
